# tree-racing

./: CMakeLists.txt  README.md  base_scoring.py  encoder.py
race1/: baseline.py  race1.md
race1/data/: parse_mushrooms.cpp  parse_tennis.cpp  parse_zoo.cpp
race2/: README.md  eval.hpp  tree.hpp
race2/data/: parser_car_eval.cpp
src/race1/: race1.md
